openturns/1.20/_sources/auto_reliability_sensitivity/reliability/index.rst.txt


.. _sphx_glr_auto_reliability_sensitivity_reliability:

.. _Reliability:

Reliability
-----------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Latin Hypercube Sampling">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_lhs_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_lhs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a probability with Latin Hypercube Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate an Event">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_event_manipulation_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_event_manipulation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simulate an Event</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Monte Carlo">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_monte_carlo_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_monte_carlo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a probability with Monte Carlo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use a randomized QMC algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_randomized_qmc_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_randomized_qmc.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use a randomized QMC algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Adaptive Directional Stratification Algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_adaptive_directional_sampling_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_adaptive_directional_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the Adaptive Directional Stratification Algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the post-analytical importance sampling algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_post_analytical_importance_sampling_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_post_analytical_importance_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the post-analytical importance sampling algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Directional Sampling Algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_directional_sampling_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_directional_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the Directional Sampling Algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a flooding probability">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_flood_model_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_flood_model.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a flooding probability</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Specify a simulation algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_probability_simulation_parametrization_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_probability_simulation_parametrization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Specify a simulation algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Importance Sampling algorithm">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_importance_sampling_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_importance_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the Importance Sampling algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a threshold event">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_create_threshold_event_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_create_threshold_event.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a threshold event</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Monte-Carlo on axial stressed beam: a quick start guide to reliabil...">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_axial_stressed_beam_quickstart_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_axial_stressed_beam_quickstart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Estimate a probability with Monte-Carlo on axial stressed beam: a quick start guide to reliability</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Exploitation of simulation algorithm results">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_probability_simulation_results_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_probability_simulation_results.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exploitation of simulation algorithm results</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the FORM algorithm in case of several design points">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_multi_form_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_multi_form.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the FORM algorithm in case of several design points</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Non parametric Adaptive Importance Sampling (NAIS)">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_nais_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_nais.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Non parametric Adaptive Importance Sampling (NAIS)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a domain event">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_create_domain_event_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_create_domain_event.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a domain event</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the FORM - SORM algorithms">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_form_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_form.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use the FORM - SORM algorithms</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Subset Sampling">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_subset_sampling_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_subset_sampling.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Subset Sampling</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test the design point with the Strong Maximum Test">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_strong_maximum_test_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_strong_maximum_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Test the design point with the Strong Maximum Test</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Time variant system reliability problem">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_proba_system_event_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_proba_system_event.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Time variant system reliability problem</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Axial stressed beam : comparing different methods to estimate a probability">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_axial_stressed_beam_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_axial_stressed_beam.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Axial stressed beam : comparing different methods to estimate a probability</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create unions or intersections of events">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_event_system_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_event_system.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create unions or intersections of events</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An illustrated example of a FORM probability estimate">

.. only:: html

  .. image:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_form_explained_thumb.png
    :alt:

  :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_form_explained.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">An illustrated example of a FORM probability estimate</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_estimate_probability_lhs
   /auto_reliability_sensitivity/reliability/plot_event_manipulation
   /auto_reliability_sensitivity/reliability/plot_estimate_probability_monte_carlo
   /auto_reliability_sensitivity/reliability/plot_estimate_probability_randomized_qmc
   /auto_reliability_sensitivity/reliability/plot_estimate_probability_adaptive_directional_sampling
   /auto_reliability_sensitivity/reliability/plot_post_analytical_importance_sampling
   /auto_reliability_sensitivity/reliability/plot_estimate_probability_directional_sampling
   /auto_reliability_sensitivity/reliability/plot_flood_model
   /auto_reliability_sensitivity/reliability/plot_probability_simulation_parametrization
   /auto_reliability_sensitivity/reliability/plot_estimate_probability_importance_sampling
   /auto_reliability_sensitivity/reliability/plot_create_threshold_event
   /auto_reliability_sensitivity/reliability/plot_axial_stressed_beam_quickstart
   /auto_reliability_sensitivity/reliability/plot_probability_simulation_results
   /auto_reliability_sensitivity/reliability/plot_multi_form
   /auto_reliability_sensitivity/reliability/plot_nais
   /auto_reliability_sensitivity/reliability/plot_create_domain_event
   /auto_reliability_sensitivity/reliability/plot_estimate_probability_form
   /auto_reliability_sensitivity/reliability/plot_subset_sampling
   /auto_reliability_sensitivity/reliability/plot_strong_maximum_test
   /auto_reliability_sensitivity/reliability/plot_proba_system_event
   /auto_reliability_sensitivity/reliability/plot_axial_stressed_beam
   /auto_reliability_sensitivity/reliability/plot_event_system
   /auto_reliability_sensitivity/reliability/plot_form_explained

